# common-amm

./: .gitignore  .gitmodules  .npmrc  .rustfmt.toml  Cargo.toml  Makefile  NOTICE.md  README.md  config.json  jest.config.js  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: e2e-tests.yaml  pr-checks.yaml  store-artifacts.yaml
amm/: Makefile
amm/common/: Cargo.toml  factory.rs  lib.rs  router.rs
amm/contracts/factory/: Cargo.toml  lib.rs
amm/contracts/mock_rate_provider/: Cargo.toml  lib.rs
amm/contracts/pair/: Cargo.toml  data.rs  lib.rs
amm/contracts/psp22/: Cargo.toml  lib.rs
amm/contracts/router/: Cargo.toml  helpers.rs  lib.rs  pool.rs
amm/contracts/router_v2/: Cargo.toml  lib.rs  pair.rs  pool.rs  stable_pool.rs  utils.rs
amm/contracts/stable_pool/: Cargo.toml  amp_coef.rs  lib.rs  token_rate.rs
amm/contracts/wnative/: Cargo.toml  lib.rs
amm/drink-tests/: Cargo.toml
amm/drink-tests/src/: hats.rs  lib.rs  psp22.rs  router_tests.rs  router_v2_tests.rs  utils.rs  wrapped_azero.rs
amm/drink-tests/src/stable_swap_tests/: mod.rs  tests_add_remove_lp.rs  tests_getters.rs  tests_rated.rs  tests_swap_exact_in_received.rs  tests_swap_exact_out.rs
amm/e2e-tests/: Cargo.toml  rust-toolchain.toml
amm/e2e-tests/src/: lib.rs  psp22.rs  wrapped_azero.rs
amm/logics/: Cargo.toml  lib.rs
amm/logics/helpers/: helper.rs  mod.rs  transfer_helper.rs
amm/logics/impls/pair/: data.rs  pair.rs
amm/logics/impls/router/: data.rs  router.rs
amm/logics/traits/: factory.rs  pair.rs  router.rs  wnative.rs
amm/scripts/: prepare_rust_wrappers.sh
amm/traits/: Cargo.toml  errors.rs  factory.rs  lib.rs  ownable2step.rs  pair.rs  rate_provider.rs  router.rs  router_v2.rs  stable_pool.rs  swap_callee.rs
artifacts/: farm_contract.contract  farm_contract.json  farm_contract.wasm  psp22.contract  psp22.json  psp22.wasm  wrapped_azero.contract  wrapped_azero.wasm
builds/: README.md
deployments/mainnet/: README.md
deployments/mainnet/contracts/: factory_contract.contract  factory_contract.json  farm_contract.json  pair_contract.contract  pair_contract.json  router_contract.contract  router_contract.json  router_v2_contract.contract  router_v2_contract.json  stable_pool_contract.contract  (+1 more)
deployments/testnet/: addresses.md
docker/: Dockerfile
docker/ink_dev/: Dockerfile
e2e-tests/: Cargo.toml
e2e-tests/src/: events.rs  factory_contract.rs  lib.rs  pair_contract.rs  psp22_token.rs  router_contract.rs  wnative_contract.rs
e2e-tests/src/test/: factory.rs  fee.rs  mod.rs  pair.rs  router.rs  run.rs  setup.rs  tokens.rs
farm/: Makefile
farm/contract/: Cargo.toml  lib.rs
farm/contracts/: Cargo.toml  error.rs  farm_state.rs  lib.rs  reentrancy_guard.rs  rust-toolchain.toml  tests.rs  views.rs
farm/contracts/instance/: Cargo.toml  error.rs  lib.rs  math.rs  reward_token.rs  state.rs  tests.rs  utils.rs  views.rs
farm/contracts/manager/: Cargo.toml  lib.rs
farm/psp22-traits/: Cargo.toml  lib.rs
farm/tests/: Cargo.toml  README.md
farm/tests/src/: hats.rs  lib.rs  tests.rs  utils.rs
farm/tests/src/farm/: mod.rs
farm/tests/src/psp22/: mod.rs  psp22_contract.rs
farm/trait/: Cargo.toml  lib.rs
farm/traits/manager/: Cargo.toml  lib.rs
helpers/: Cargo.toml  constants.rs  lib.rs  math.rs  types.rs
helpers/stable_swap_math/: fees.rs  mod.rs
scripts/: add_liquidity.ts  constants.ts  cp_contract_artifacts.sh  create_tokens.ts  deploy.ts  dev_env  example_setup.ts  factory.ts  local_env  pair.ts  router.ts  shared.ts  token.ts  utils.ts  wnative.ts
scripts/amm/: add_liquidity.ts  create_tokens.ts  deploy.ts  router.ts  shared.ts  spawn_dex_data.ts  token.ts  utils.ts  wnative.ts
scripts/commonfarms-cli/: README.md  commonfarms-cli  farm_contract.json  requirements.txt
scripts/constants/: index.ts
scripts/factory/: index.ts
scripts/farm/: create_farms.ts  farm_specs.json  pool_addresses.json  setup_farms.ts  setup_randomized_farms.ts  token_addresses.json  types.ts  utils.ts
scripts/pair/: index.ts
scripts/router/: index.ts
scripts/shared/: index.ts
scripts/token/: index.ts
scripts/wnative/: index.ts
test-contracts/: psp22.json
tests/: Dex.spec.ts  globalSetup.ts  testHelpers.ts
types/build-extrinsic/: factory_contract.ts  pair_contract.ts  psp22_token.ts  router_contract.ts  wnative_contract.ts
types/constructors/: factory_contract.ts  pair_contract.ts  psp22_token.ts  router_contract.ts  wnative_contract.ts
types/contract-info/: factory_contract.ts  pair_contract.ts  psp22_token.ts  router_contract.ts  wnative_contract.ts
types/contracts/: factory_contract.ts  pair_contract.ts  psp22_token.ts  router_contract.ts  wnative_contract.ts
types/data/: factory_contract.json  pair_contract.json  psp22_token.json  router_contract.json  wnative_contract.json
types/event-data/: factory_contract.json  pair_contract.json  psp22_token.json
types/event-types/: factory_contract.ts  pair_contract.ts  psp22_token.ts  router_contract.ts  wnative_contract.ts
types/events/: factory_contract.ts  pair_contract.ts  psp22_token.ts  router_contract.ts  wnative_contract.ts
types/mixed-methods/: factory_contract.ts  pair_contract.ts  psp22_token.ts  router_contract.ts  wnative_contract.ts
types/query/: factory_contract.ts  pair_contract.ts  psp22_token.ts  router_contract.ts  wnative_contract.ts
types/tx-sign-and-send/: factory_contract.ts  pair_contract.ts  psp22_token.ts  router_contract.ts  wnative_contract.ts
types/types-arguments/: factory_contract.ts  pair_contract.ts  router_contract.ts  wnative_contract.ts
types/types-returns/: factory_contract.ts  pair_contract.ts  router_contract.ts  wnative_contract.ts
uniswap-v2/contracts/psp22/: Cargo.toml  lib.rs
uniswap-v2/logics/: Cargo.toml  lib.rs
uniswap-v2/logics/helpers/: helper.rs  mod.rs  transfer_helper.rs
uniswap-v2/logics/impls/factory/: data.rs  factory.rs
uniswap-v2/logics/impls/pair/: data.rs  pair.rs
uniswap-v2/logics/impls/router/: router.rs
uniswap-v2/logics/traits/: factory.rs  pair.rs  router.rs  types.rs
(+24 files in other folders)
