[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
assert2 = "0.3.10"
env_logger = "0.10.0"
rand = "0.8.5"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
tokio = { version = "1.28.2", features = ["parking_lot", "sync"] }

aleph_client = "3.0.0"
ink_primitives = "4.0.1"
#ink-wrapper-types = "0.4.0"
ink-wrapper-types = { git = "https://github.com/Cardinal-Cryptography/ink-wrapper.git" }

uniswap_v2 = {path = "../uniswap-v2/logics" }

[lib]
doctest = false
