[package]
name = "e2e-tests"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
assert2 = "0.3.10"
env_logger = "0.10.0"
rand = "0.8.5"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
tokio = { version = "1.28.2", features = ["parking_lot", "sync"] }

aleph_client = "3.0.0"
ink_primitives = "4.2.1"
ink-wrapper-types = "0.5.0"

common = { path = "../amm/common" }

[lib]
doctest = false
