[package]
name = "amm-helpers"
version = "0.2.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { path = "../../ink/crates/ink", default-features = false }
ink_metadata = { path = "../../ink/crates/metadata", features = ["derive"], optional = true }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

primitive-types = { version = "0.12.1", default-features = false, features = [
    "codec",
] }

[dev-dependencies]
curve25519-dalek = { version = "4.0.0-rc.2", features = ["digest"] }
sha2 = "0.10.6"

[lib]
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_metadata",
    "ink_metadata/std",
    "scale/std",
    "scale-info/std",
    "primitive-types/std",
    "primitive-types/scale-info",
]
