[package]
name = "amm-tests-drink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
drink = { path = "../../../drink/drink" }
ink-wrapper-types = { path = "../../../ink-wrapper/ink-wrapper-types", default-features = false, features = [
    "drink",
] }

ink_primitives = "4.3.0"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }

anyhow = "1.0.69"
assert2 = "0.3.10"

num-format = "0.4.4"