[package]
name = "amm"
version = "0.2.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }
ink_metadata = { version = "=4.3.0", features = ["derive"], optional = true }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

openbrush = { version = "3.2.0", default-features = false, features = [
    "psp22",
    "ownable",
    "reentrancy_guard",
] }
primitive-types = { version = "0.12.1", default-features = false, features = [
    "codec",
] }
sp-arithmetic = { version = "18.0.0", default-features = false }
amm-helpers = { path = "../../helpers", default-features = false }

[dev-dependencies]
curve25519-dalek = { version = "4.0.0-rc.2", features = ["digest"] }
sha2 = "0.10.6"

[lib]
name = "amm"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_metadata",
    "ink_metadata/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "primitive-types/std",
    "primitive-types/scale-info",
    "sp-arithmetic/std",
    "amm-helpers/std",
]
