[package]
name = "farm_contract"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

primitive-types = { version = "0.12.1", default-features = false, features = [
    "codec",
] }
psp22 = { version = "=0.2.2", default-features = false }
amm-helpers = { path = "../../helpers", default-features = false }

farm-trait = { path = "../trait", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22/std",
    "primitive-types/std",
    "primitive-types/scale-info",
    "amm-helpers/std",
    "farm-trait/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false
