[package]
name = "uniswap_v2_farm"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag = "3.1.0", default-features = false }
primitive-types = { version = "=0.12.1", default-features = false, features = [
    "codec",
] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }

psp22-traits = { path = "../psp22-traits", default-features = false }

[dev-dependencies]
curve25519-dalek = { version = "4.0.0-rc.2", features = ["digest"] }
sha2 = "0.10.6"

[lib]
name = "univ2_farm"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22-traits/std",
    "openbrush/std",
    "primitive-types/std",
    "primitive-types/scale-info",
    "sp-arithmetic/std",
]
ink-as-dependency = []
