[package]
name = "amm_farm"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag = "3.1.0", default-features = false }
primitive-types = { version = "=0.12.1", default-features = false, features = [
    "codec",
] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }

psp22-traits = { path = "../psp22-traits", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22-traits/std",
    "openbrush/std",
    "primitive-types/std",
    "primitive-types/scale-info",
    "sp-arithmetic/std",
]
ink-as-dependency = []
