[package]
name = "farm-tests-drink"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
drink = "0.8.6"
ink-wrapper-types = { git = "https://github.com/Cardinal-Cryptography/ink-wrapper", rev = "47ba45b", default-features = false, features = [
    "drink",
] }

ink_primitives = "4.3.0"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }

anyhow = "1.0.69"
assert2 = "0.3.10"
