[package]
name = "uniswap_v2"
version = "0.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"

[dependencies]
ink = { version = "=4.2.1", default-features = false}
ink_metadata = { version = "=4.2.1", features = ["derive"], optional = true }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag = "3.1.1", default-features = false, features = ["psp22", "ownable", "reentrancy_guard"] }
primitive-types = { version = "0.11.1", default-features = false, features = ["codec"] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37"}

[dev-dependencies]
curve25519-dalek = { version = "4.0.0-rc.2", features = [ "digest" ] }
sha2 = "0.10.6"

[lib]
name = "uniswap_v2"
path = "lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_metadata",
    "ink_metadata/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "primitive-types/std",
    "primitive-types/scale-info",
    "sp-arithmetic/std"
]
