[package]
name = "factory_contract"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.9", default-features = false, features = [
    "derive",
], optional = true }

pair_contract = { path = "../pair", default-features = false, features = [
    "ink-as-dependency",
] }
amm = { path = "../../logics", default-features = false }

[lib]
name = "factory_contract"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "amm/std",
    "pair_contract/std",
]
ink-as-dependency = []
