[package]
name = "mock_rate_provider_contract"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.9", default-features = false, features = [
    "derive",
], optional = true }


traits = { path = "../../traits", default-features = false }

[lib]
name = "mock_rate_provider_contract"
path = "lib.rs"
doctest = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "traits/std",
]
ink-as-dependency = []
