[package]
name = "pair_contract"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.9", default-features = false, features = [
    "derive",
], optional = true }

psp22 = { version = "=0.2.2", default-features = false }

traits = { path = "../../traits", default-features = false }
amm-helpers = { path = "../../../helpers", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = [
    "codec",
] }
sp-arithmetic = { version = "18.0.0", default-features = false }

[lib]
name = "pair_contract"
path = "lib.rs"
doctest = false

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22/std",
    "traits/std",
    "amm-helpers/std",
]
ink-as-dependency = []
