[package]
name = "psp22_token"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

openbrush = { version = "3.2.0", default-features = false, features = [
    "psp22",
] }

[lib]
name = "psp22_token"
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std"]
ink-as-dependency = []
