[package]
name = "wnative_contract"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.9", default-features = false, features = [
    "derive",
], optional = true }

common = { path = "../../common", default-features = false }

psp22 = { git = "https://github.com/Cardinal-Cryptography/PSP22.git", default-features = false }

[lib]
name = "wnative_contract"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "common/std",
    "psp22/std",
]
ink-as-dependency = []
