[package]
name = "amm_farm_manager"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

openbrush = { version = "3.2.0", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = [
    "codec",
] }
sp-arithmetic = { version = "18.0.0", default-features = false }
psp22-traits = { path = "../../traits/psp22", default-features = false }
amm-helpers = { path = "../../../helpers", default-features = false }
amm-farm = { path = "../instance", default-features = false, features = [
    "ink-as-dependency",
] }
farm-manager-trait = { path = "../../traits/manager", default-features = false }
farm-instance-trait = { path = "../../traits/instance", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "psp22-traits/std",
    "openbrush/std",
    "primitive-types/std",
    "primitive-types/scale-info",
    "sp-arithmetic/std",
    "amm-helpers/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false
