[package]
name = "farm-manager-trait"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.5", default-features = false, features = [
    "derive",
], optional = true }
psp22-traits = { path = "../psp22", default-features = false }
farm-instance-trait = { path = "../instance", default-features = false }
amm-helpers = { path = "../../../helpers", default-features = false }


[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "farm-instance-trait/std",
    "psp22-traits/std",
    "amm-helpers/std",
]
ink-as-dependency = []
