[package]
name = "psp22_token"
version = "2.1.0"
authors = ["Supercolony <green.baneling@supercolony.net>"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", tag = "3.1.1", default-features = false, features = [
    "psp22",
] }

[lib]
name = "psp22_token"
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std"]
ink-as-dependency = []
